--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>SIBOS Attendance Analytics</title>
+    <title>Sibos Attendance Analytics</title>
 
     <script src='./lib/d3.js' type='text/javascript'></script>
     <script src='./lib/crossfilter.js' type='text/javascript'></script>
@@ -21,7 +21,7 @@
         <div class='row'>
             <div class='span12'>
                 <div class="dc-data-count" style="float: left;"> 
-                    <h3><font color="#E64A19">SIBOS</font> <font color="#515A5A">Attendance Analytics |</font> <span> <a href="javascript:dc.filterAll(); dc.renderAll();">Reset</a></span> </h3>
+                    <h3><font color="#E64A19">Sibos</font> <font color="#515A5A">Attendance Analytics |</font> <span> <a href="javascript:dc.filterAll(); dc.renderAll();">Reset</a></span> </h3>
                     <h4><font color="#515A5A"><span id="dc-chart-total"></span> > <span id="dc-chart-unique"></span> > <span id="dc-chart-average"></span></font></h4>
                 </div>
             </div>
